--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,111 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.carousel-container{
   align-items: center;
+  background-color: rgba(255,255,255,0.3);
+  display: flex;
+  height: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  
+}
+.landing-background{
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
+.carousel-logo-image{
+  width:25%
+}
+
+.landing-container{
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+}
+
+.navbar-container{
+  align-items: center;
+  background-color: #172F64;
   color: white;
+  display: flex;
+  height: 10%;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.navbar-logo{
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 10%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-logo-image{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 60%;
+}
+
+.navbar-menu{
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+
+.navbar-menu-item{
+  align-items: center;
+  box-sizing: border-box;
+  border-radius: 25%;
+  cursor: pointer;
+  font-size: large;
+  display: flex;
+  height: 2rem;
+  justify-content: center;
+  width: 8rem;
+}
+
+.navbar-menu-item:hover {
+  border:1.5px solid rgb(187,239,255)
+}
+
+.navbar-social {
+  display: flex;
+  font-size: xx-large;
+  justify-content: space-evenly;
+  width: 20%;
+}
+
+.navbar-social-item{
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.navbar-social-item:hover{
+  color:rgb(187,239,255)
+}
+
+.main-container {
+  display: flex;
+  height: 25rem;
+  position: absolute;
+  top: 10%;
+  width: 100%;
 }
